--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--  Kiarych.github.io (my URL)  -->
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,7 +15,7 @@
 My name is Amir and i am <strong>sporty</strong>, <strong>cheerful</strong> and <strong>goofy</strong>
 </p>
 <hr>
-<h1>  	My clsses this quarter:	</h1>
+<h1>  	My classes this quarter:	</h1>
 <p>
 	1) PE - Physics experiment
 <br>	2) P1 - Physics 1
@@ -31,9 +34,11 @@ My name is Amir and i am <strong>sporty</strong>, <strong>cheerful</strong> and 
 </p>
 <hr>
 <p>
-There are two pictures that describe me in my <strong>happy</strong> and <strong>sad</strong> mooods
-<img src="https://i.pinimg.com/564x/37/23/fd/3723fd0d403bfab5cc1f40d1ea483cbe.jpg" <br>When i'm happy >:)
-<br> <img src="https://i.pinimg.com/564x/bc/3e/3d/bc3e3de9ca839288c7779965afb5c17c.jpg"<br> When I'm sad:(
+There are two pictures that describe me in my <strong>happy</strong> and <strong>sad</strong> mooods:
+</p>
+<p>
+<img class = "first "    src="https://i.pinimg.com/564x/37/23/fd/3723fd0d403bfab5cc1f40d1ea483cbe.jpg" /> <br>When i'm happy >:)
+<br> <img  class= "second"  src="https://i.pinimg.com/564x/bc/3e/3d/bc3e3de9ca839288c7779965afb5c17c.jpg" /><br> When I'm sad:(
 </p>
 <hr>
 <p>
